--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Grappify</title>
 </head>
 <body class="bg-stars">
+    <div class="nav_bar_flotante bg-gradient-primary flex">
+        
+            <img src="statics/img/LogoWhite.png" alt="" srcset="">
+            <h2>dsadadsasda sd asd a sd asdasdasda</h2>
+      
+    </div>
     <header class="bg-gradient-primary p-2 py-5 shadow-huge" style="border-radius: 0px 0px 80% 0%;">
         <div class="container col-2">
             <!-- copy Section -->
@@ -109,40 +115,54 @@
         <button class="mt-5 btn-primary shadow-2xl" type="submit">Programaras Llamada</button>
     </section>
     <!--  -->
-    <section class="bg-dark-blue shadow-green-sm">
+    <section class="bg-dark-blue shadow-green-sm pb-4">
         <div class="container col-2 pt-5 pb-1">
-            <h1 class="primary">Lorem ipsum dolor sit amet consectetur adipisicing ita?</h1>
+            <h1 class="primary">Lorem ipsum dolor sit amet <span class="white">consectetur adipisicing</span> ita? </h1>
             <div class="title text-right white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius culpa laudantium est itaque modi sit delectus aliquam adipisci accusantium aut?</div>
-            <div class="bg-primary">
-                da
-            </div>
         <!-- Contenedor slide -->
-         <div class="col-2">
+        </div>  
+        <div class="col-4 container pt-4">
             <!-- service Card -->
-            <div class="bg-gradient-dark br-1 p-1 flex flex-col">
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <h3 class="pt-1 title">Nombre del servicio que quiero referer</h3>
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
             </div>
             <!-- end Service CArd -->
                <!-- service Card -->
-            <div class="bg-gradient-dark br-1 p-1 flex flex-col">
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <h3 class="pt-1 title">Nombre del servicio que quiero referer</h3>
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
             </div>
             <!-- service Card -->
-            <div class="bg-gradient-dark br-1 p-1 flex flex-col">
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <h3 class="pt-1 title">Nombre del servicio que quiero referer</h3>
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
             </div>
             <!-- end Service CArd -->
                <!-- service Card -->
-            <div class="bg-gradient-dark br-1 p-1 flex flex-col">
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <h3 class="pt-1 title">Nombre del servicio que quiero referer</h3>
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
             </div>
-         </div>
-
-        </div>     
+            <!-- service Card -->
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
+            </div>
+            <!-- end Service CArd -->
+               <!-- service Card -->
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
+            </div>
+            <!-- service Card -->
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
+            </div>
+            <!-- end Service CArd -->
+               <!-- service Card -->
+            <div class="bg-gradient-dark br-1 p-1">
+                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue hover-effect" alt="">
+            </div>
+            <button class="mt-3 btn-primary shadow-2xl" type="submit">Programaras Llamada</button>
+         </div>   
+    </section>
+    <section>
+        hol
     </section>
 </body>
 </html>
