--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Grappify</title>
 </head>
 <body class="bg-stars">
-    <div class="nav_bar_flotante bg-dark-blue shadow-huge flex ">
+    <div class="nav_bar_flotante bg-dark-blue shadow-green-sm flex ">
             <div class="container flex py-1 justify-between">
                 <img src="statics/img/LogoWhite.png" alt="" srcset="">
                 <div class="">
@@ -143,60 +143,76 @@
         </div>  
         <div class="grid grid-cols-4 gap-4 container pt-4">
             <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
              <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
              <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
              <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
             <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
              <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
              <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
              <!-- service Card -->
-            <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
-                <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
-                <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
-                <div class="title pt-1">Lorem, ipsum dolor.</div>
-            </div>
+            <a href="Projects.html">
+                <div class="bg-gradient-dark flex flex-col br-1 p-1 hover-effect">
+                    <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+                    <img src="statics/img/3d_render_rocket_blasting_off 2.png" class="br-1 bg-dark-blue" alt="">
+                    <div class="title pt-1">Lorem, ipsum dolor.</div>
+                </div>
+            </a>
             <!-- end Service CArd -->
              
             <button class="mt-3 btn-primary shadow-2xl" type="submit">Programaras Llamada</button>
