--- a/Projects.html
+++ b/Projects.html
@@ -8,6 +8,15 @@
     <title>Grappify</title>
 </head>
 <body class="bg-stars">
+    <!-- Nav bar flotante -->
+    <div class="nav_bar_flotante bg-dark-blue shadow-green-sm flex ">
+        <div class="container flex py-1 justify-between">
+            <img src="statics/img/LogoWhite.png" alt="" srcset="">
+            <div class="">
+                <button class="btn-primary shadow-2xl" type="submit">Programar Llamada</button>
+            </div>
+         </div>
+    </div>
     <header class="bg-gradient-primary  py-3">
         <div class="container">
             <!-- navbar -->
@@ -32,7 +41,7 @@
         </div>
     </header>
     <!-- grid visuales projects -->
-    <section class="projects grid grid-cols-4">
+    <section class="projects grid grid-cols-3">
         <div class="card">
             <img src="https://picsum.photos/id/237/300/300" alt="">
         </div>
@@ -57,8 +66,41 @@
         <div class="card">
             <img src="https://picsum.photos/id/218/300/300" alt="">
         </div>
+        <div class="card">
+            <img src="https://picsum.photos/id/225/300/300" alt="">
+        </div>
 
     </section>
+    <!-- realted projects -->
+     <div class="container py-5 grid grid-cols-3 gap-4">
+        <h2 class="col-span-2 pb-3 primary">Quizas te iterese ver otros projectos</h2>
+        <div class=""></div>
+        <div class="br-1 bg-gradient-primary">
+            <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+            <img src="statics/img/3d_render_rocket_blasting_off 2.png" alt="">
+        </div>
+        <div class="br-1 bg-gradient-primary">
+            <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+            <img src="statics/img/3d_render_rocket_blasting_off 2.png" alt="">
+        </div>
+        <div class="br-1 bg-gradient-primary">
+            <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+            <img src="statics/img/3d_render_rocket_blasting_off 2.png" alt="">
+        </div>
+        <div class="br-1 bg-gradient-primary">
+            <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+            <img src="statics/img/3d_render_rocket_blasting_off 2.png" alt="">
+        </div>
+        <div class="br-1 bg-gradient-primary">
+            <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+            <img src="statics/img/3d_render_rocket_blasting_off 2.png" alt="">
+        </div>
+        <div class="br-1 bg-gradient-primary">
+            <div class="absolute m-sm p-sm primary bg-dark-blue br-sm">Branding</div>
+            <img src="statics/img/3d_render_rocket_blasting_off 2.png" alt="">
+        </div>
+     </div>
+     <!--  -->
     <footer class="py-3 bg-dark-blue">
         
        
@@ -117,4 +159,19 @@
         </div>
      </div>
 </body>
+<script>
+    // Espera a que el DOM esté completamente cargado
+    document.addEventListener("DOMContentLoaded", function() {
+        const navBar = document.querySelector('.nav_bar_flotante');
+
+        window.addEventListener('scroll', function() {
+            // Revisa la posición actual del scroll
+            if (window.scrollY > 300) {
+                navBar.style.top = '0'; // Muestra la barra
+            } else {
+                navBar.style.top = '-100px'; // Oculta la barra
+            }
+        });
+    });
+</script>
 </html>
