home, servicios y proyectos

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 <body class="bg-stars">
     <!-- Nav bar flotante -->
     <div class="nav_bar_flotante bg-dark-blue shadow-green-sm flex ">
-        <div class="container flex py-1 justify-between">
-            <img src="statics/img/LogoWhite.png" alt="" srcset="">
-            <div class="">
+        <div class="container flex py-1 justify-between items-center">
+            <img src="statics/img/LogoWhite.png" alt="Logo" class="">
+            <ul class="flex space-x-4 primary mr-auto">
+                <li class="px-1">  <a href="#">Nosotros</a></li>
+                <li class="px-1">  <a href="servicios.html">Servicios</a></li>
+                <li class="px-1">  <a href="#">Planes</a></li>
+            </ul>
+            <div>
                 <button class="btn-primary shadow-2xl" type="submit">Programar Llamada</button>
             </div>
-         </div>
+        </div>
     </div>
     <header class="bg-gradient-primary p-2 py-5 shadow-huge" style="border-radius: 0px 0px 80% 0%;">
         <div class="container grid grid-cols-2">
@@ -82,6 +87,7 @@
         </div>
     </header>
     <!--  -->
+    <!-- DATA EXPERIENCIA -->
     <section class="container p-5 flex flex-col w-pc">
         <div class="grid grid-cols-3 gap-4 pt-2">
             <!-- card -->
