Servicios General listo sin responsive

--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
     <title>Grappify</title>
 </head>
 <body class="bg-stars">
-    <!-- Nav bar flotante -->
-    <div class="nav_bar_flotante bg-dark-blue shadow-green-sm flex ">
-        <div class="container flex py-1 justify-between items-center">
-            <img src="statics/img/LogoWhite.png" alt="Logo" class="">
+    <!-- nav -->
+    <nav class="bg-blur nav_bar_flotante shadow-green-sm flex " style="z-index: 10000;">
+        <div class="container bg-blur-content flex py-1 justify-between items-center">
+            <a href="/">
+                <img src="statics/img/LogoWhite.png" alt="Logo" class="">
+            </a>
             <ul class="flex space-x-4 primary mr-auto">
-                <li class="px-1">  <a href="#">Nosotros</a></li>
-                <li class="px-1">  <a href="servicios.html">Servicios</a></li>
-                <li class="px-1">  <a href="#">Planes</a></li>
+                <li class="nav_bar_items px-1">  <a href="#">Nosotros</a></li>
+                <li class="nav_bar_items px-1">  <a href="#">Nuestro trabajo</a></li>
+                <li class="nav_bar_items px-1">  <a href="servicios.html">Servicios</a></li>
+                <li class="nav_bar_items px-1">  <a href="#">Planes</a></li>
             </ul>
             <div>
                 <button class="btn-primary shadow-2xl" type="submit">Programar Llamada</button>
             </div>
         </div>
-    </div>
+    </nav>
+    <!-- end nav--> 
+    
     <header class="bg-gradient-primary p-2 py-5 shadow-huge" style="border-radius: 0px 0px 80% 0%;">
         <div class="container grid grid-cols-2">
             <!-- copy Section -->
