--- a/servicio_detalle.html
+++ b/servicio_detalle.html
@@ -29,57 +29,23 @@
     <header class="bg-3 py-3">
         <div class="container pt-4">
             <!-- project Info -->
-             <div class="grid grid-cols-3 gap-4">
-                <div class="col-span-2 pr-3 b-right-primary">
+             <div class="">
+                <div class="pr-3">
                     <h2 class="dark white">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="primary">Sed, sequi cumque? Eaque architecto </span>repellendus facilis in possimus hic non sunt!</h2>
-                    <p class="white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur veniam itaque quidem alias, assumenda reiciendis omnis possimus ipsa sed laborum suscipit quaerat voluptatem eos tempora odit? Fugit velit sed maxime?</p>
-                </div>
-                <div class="pl-3">
-                    <div class="flex  flex-col justify-start">
-                        <h3 class="white"><span class="primary">Industry:</span> Lorem, ipsum.</h3>
-                        <h3 class="white mt-1"><span class="primary">services:</span> service1, services2, services3</h3>
-                        <p></p>
-                    </div>
                 </div>
              </div>
         </div>
     </header>
-    <!-- grid visuales projects -->
-    <!-- <section class="projects grid grid-cols-3">
-        <div class="card">
-            <img src="https://picsum.photos/id/237/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/234/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/232/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/225/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/217/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/221/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/220/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/218/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/225/300/300" alt="">
-        </div>
 
-    </section> -->
-    
     <!-- content from wordpress -->
      <section class="container py-2">
         <!-- agregar codigo para wordpress -->
      </section>
+     <!-- contenido -->
+      <div class="container">
+
+      </div>
+      <!-- contenido Fin -->
     <div class="p-3">
         <button class="btn-primary shadow-2xl" type="submit">Volver</button>
     </div>
