--- a/servicios.html
+++ b/servicios.html
@@ -39,7 +39,7 @@
     <div class="container grid grid-cols-4 gap-4 py-5 primary">
         <h2 class="col-span-4 pb-3">Nuestros Servicios</h2>
         <!-- services Card -->
-         <a href="servicios_detail.html">
+         <a href="servicio.html">
             <div class="card-services br-1 p-2 flex flex-col bg-dark-blue shadow-green-sm hover-effect">
                 <div class="flex flex-col">
                     <div class="p-1">
@@ -155,51 +155,7 @@
             <button class="btn-primary shadow-2xl" type="submit">Programar Llamada</button>
         </div>
     </div>
-       <!-- grid visuales projects -->
-       <section class="projects grid grid-cols-6 white">
-        
-        <h2 class="container col-span-6 pb-4">
-            Lorem ipsum dolor sit amet consectetur.
-        </h2>
-    
-        <div class="card">
-            <img src="https://picsum.photos/id/237/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/234/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/232/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/237/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/234/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/232/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/225/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/217/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/221/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/220/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/218/300/300" alt="">
-        </div>
-        <div class="card">
-            <img src="https://picsum.photos/id/225/300/300" alt="">
-        </div>
 
-    </section>
     <!-- form -->
     <section class="bg-gradient-primary py-5">
         <div class="container grid grid-cols-2">
